<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>pro.taskana</groupId>
	<artifactId>taskana-parent</artifactId>
	<version>1.1.6-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>${project.groupId}:${project.artifactId}</name>
	<description>This pom is parent to all taskana modules and serves the common build.</description>
	<url>http://taskana.pro</url>

	<modules>
		<module>lib</module>
		<module>rest</module>
		<!-- History is an optional module. -->
		<module>history</module>
	</modules>

	<properties>
		<java.version>1.8</java.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<version.mybatis>3.4.5</version.mybatis>
		<version.slf4j>1.7.25</version.slf4j>
		<version.json>20180130</version.json>
		<version.jackson>2.9.8</version.jackson>
		<version.aspectjweaver>1.9.2</version.aspectjweaver>

		<version.javax.validation>2.0.1.Final</version.javax.validation>
		<version.javax.servlet>4.0.1</version.javax.servlet>

		<!-- build dependencies -->
		<version.maven.checkstyle>3.0.0</version.maven.checkstyle>
		<version.maven.jar>3.1.1</version.maven.jar>
		<version.maven.compiler>3.8.1</version.maven.compiler>
		<version.maven.source>3.0.1</version.maven.source>
		<version.maven.javadoc>3.1.0</version.maven.javadoc>
		<version.maven.resources>3.0.2</version.maven.resources>
		<version.maven.surefire>3.0.0-M3</version.maven.surefire>
		<version.maven.asciidoctor>1.6.0</version.maven.asciidoctor>
		<version.maven.wildfly>2.0.0.Final</version.maven.wildfly>

		<!-- release dependencies -->
		<version.maven.gpg>1.5</version.maven.gpg>
		<version.sonatype>1.6.8</version.sonatype>

		<!-- spring dependencies -->
		<version.spring>5.0.5.RELEASE</version.spring>
		<version.spring.core>1.2.0.RELEASE</version.spring.core>
		<version.spring.boot>2.0.2.RELEASE</version.spring.boot>
		<version.spring.restdocs>2.0.2.RELEASE</version.spring.restdocs>
		<version.spring.mybatis>1.3.1</version.spring.mybatis>
		<version.spring.ldap>2.3.2.RELEASE</version.spring.ldap>
		<version.spring.hateos>0.24.0.RELEASE</version.spring.hateos>

		<!-- java ee dependencies -->
		<version.resteasy>3.1.2.Final</version.resteasy>
		<version.thorntail>2.3.0.Final</version.thorntail>
		<version.wildfly.security>1.6.1.Final</version.wildfly.security>
		<version.javaee-api>7.0</version.javaee-api>
		<version.arquillian>1.1.10.Final</version.arquillian>

		<!-- test dependencies -->
		<version.junit.jupiter>5.5.2</version.junit.jupiter>
		<version.log4j>2.8.1</version.log4j>
		<version.archunit>0.12.0</version.archunit>
		<version.mockito>2.8.47</version.mockito>
		<version.powermock>1.7.1</version.powermock>
		<version.hamcrest>1.3</version.hamcrest>
		<version.equalsverifier>3.1.10</version.equalsverifier>
		<version.openpojo>0.8.13</version.openpojo>

		<!-- database driver versions -->
		<version.h2>1.4.197</version.h2>
		<version.db2>11.1.1.1</version.db2>
		<version.postgres>42.2.5</version.postgres>
	</properties>

	<developers>
		<developer>
			<name>Holger Hagen</name>
			<email>holger.hagen@novatec-gmbh.de</email>
			<organization>Novatec Consulting GmbH</organization>
			<organizationUrl>https://www.novatec-gmbh.de</organizationUrl>
		</developer>
	</developers>

	<scm>
		<url>http://github.com/taskana/taskana/tree/master</url>
		<connection>scm:git:git://github.com/taskana/taskana.git</connection>
		<developerConnection>scm:git:ssh://github.com:taskana/taskana.git</developerConnection>
	</scm>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<profiles>
		<profile>
			<id>snapshot</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${version.maven.gpg}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>${version.sonatype}</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>false</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<distributionManagement>
				<snapshotRepository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
				</snapshotRepository>
			</distributionManagement>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${version.maven.gpg}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>${version.sonatype}</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>false</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<distributionManagement>
				<repository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
			</distributionManagement>
		</profile>
		<profile>
			<id>eclipse</id>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.eclipse.m2e</groupId>
							<artifactId>lifecycle-mapping</artifactId>
							<version>1.0.0</version>
							<configuration>
								<lifecycleMappingMetadata>
									<pluginExecutions>
										<pluginExecution>
											<pluginExecutionFilter>
												<groupId>org.apache.maven.plugins</groupId>
												<artifactId>maven-checkstyle-plugin</artifactId>
												<versionRange>[1.0.0,)</versionRange>
												<goals>
													<goal>check</goal>
												</goals>
											</pluginExecutionFilter>
											<action>
												<ignore/>
											</action>
										</pluginExecution>
									</pluginExecutions>
								</lifecycleMappingMetadata>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<!--
			This plugin appends version information into the jar, so that it can be extracted from the jar.
			See TSK-837 for more information
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${version.maven.jar}</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${version.maven.compiler}</version>
				<configuration>
					<showWarnings>true</showWarnings>
					<failOnWarning>true</failOnWarning>
					<compilerArgs>
						<arg>-Xlint:all</arg>
						<arg>-proc:none</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${version.maven.source}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${version.maven.javadoc}</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${version.maven.surefire}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${version.maven.checkstyle}</version>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<configuration>
							<configLocation>qa/checkstyle/checkstyle.xml</configLocation>
							<encoding>UTF-8</encoding>
							<consoleOutput>true</consoleOutput>
							<failsOnError>true</failsOnError>
							<failOnViolation>true</failOnViolation>
							<includeTestSourceDirectory>true</includeTestSourceDirectory>
						</configuration>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
